# echo

./: README.md  echo.iconset
agent/: .gitignore  build-python.py  ctsm.spec  hook-livekit.py  package.json  pyproject.toml
agent/src/ctsm/: electron_main.py  main.py  models.py  prompt.py
agent/src/ctsm/mcp/: agent_tools.py  context.py  server.py  util.py
electron/: defaultAgents.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  vite.config.ts
electron/assets/icons/: image.icns
electron/dist-renderer/: index.html
electron/dist-renderer/assets/: index-BkygGqTG.css  index-C3yYxU7n.js
electron/src/: App.tsx  index.css  index.html
electron/src/components/ui/: dropdown-menu.tsx
